feat: buscar e filtrar cartoes com paginacao optativa (item 5)
